--- a/render.yaml
+++ b/render.yaml
@@ -2,6 +2,6 @@ services:
   - type: web
     name: nearby-hostel-finder
     env: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: python -m pip install --upgrade pip setuptools wheel && python -m pip install -r requirements.txt
     startCommand: streamlit run hostel_finder.py --server.port $PORT --server.address 0.0.0.0 --server.enableCORS false
     plan: free
